@@ -1,3 +1,5 @@
+2015-08-20 <jthaler>
+   Trying to fix "abs" bug in ExtraRecombiners.cc
 2015-08-19 <jthaler>
    Adding arXiv numbers to XCone papers
    Used this_jet in example_basic_usage.
